--- a/elvis.config
+++ b/elvis.config
@@ -5,7 +5,7 @@
       {config,
         [
           #{dirs => ["src", "test"],
-            filter => "minuteman_*.erl",
+            filter => "lashup_*.erl",
             rules => [
             {elvis_style, max_function_length, #{max_length => 30}},
             {elvis_style, no_spec_with_records},
