--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 
 {dialyzer, [{warnings, [no_behaviours, race_conditions, error_handling]}]}.
 {xref_checks, [undefined_function_calls, undefined_functions, locals_not_used, deprecated_function_calls, deprecated_functions]}.
-{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+{erl_opts, [warnings_as_errors, debug_info, {parse_transform, lager_transform}]}.
 
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 
@@ -24,4 +24,8 @@
 
 {ct_extra_params, "-config test/ct.config"}.
 
+
+%% Circle-CI doesn't set FQDNs, so long names break
+
+{ct_use_short_names, true}.
 
