--- a/rebar.config
+++ b/rebar.config
@@ -16,6 +16,7 @@
 {cover_export_enabled, true}.
 
 {deps, [
+  {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}},
   {sync, ".*", {git, "git://github.com/rustyio/sync.git", "master"}},
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
   {riak_dt, ".*", {git, "https://github.com/basho/riak_dt.git", {tag, "2.1.1"}}}
