--- a/app.config
+++ b/app.config
@@ -25,5 +25,10 @@
     [
       {contact_nodes, ['foo@3c075477e55e', 'foo@WL-193-7']}
     ]
+  },
+  {sync,
+    [
+      {src_dirs, {replace, []}}
+    ]
   }
 ].
