--- a/rebar.config
+++ b/rebar.config
@@ -16,6 +16,8 @@
 {cover_export_enabled, true}.
 
 {deps, [
+  {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
+  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}},
   {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}},
   {sync, ".*", {git, "git://github.com/rustyio/sync.git", "master"}},
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
