--- a/rebar.config
+++ b/rebar.config
@@ -16,12 +16,12 @@
 {cover_export_enabled, true}.
 
 {deps, [
+  {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
+  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "delta_data_types-18"}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}},
   {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}},
-  {sync, ".*", {git, "git://github.com/rustyio/sync.git", "master"}},
-  {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "delta_data_types-18"}}
+  {sync, ".*", {git, "git://github.com/rustyio/sync.git", "master"}}
   ]}.
 {sub_dirs, ["rel"]}.
 
