--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
 
 {deps, [
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "delta_data_types-18"}},
+  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}},
   {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}},
