--- a/circle.yml
+++ b/circle.yml
@@ -9,26 +9,23 @@ dependencies:
     - ~/.dialyzer_core*
     - ~/.rebar
     - .rebar
+    - _build
   pre:
     - curl -O -L https://raw.githubusercontent.com/yrashk/kerl/master/kerl && chmod 755 kerl
     - if [ ! -d ~/extras/otp/18.1 ]; then ./kerl build 18.1 18.1; ./kerl install 18.1 ~/extras/otp/18.1; fi
-  override:
-    - ./rebar get-deps
-    - ./rebar check-plt
 
 test:
   override:
-    - ./rebar compile
-    - ./rebar ct -v
-    - ./rebar eu
-    - ./rebar check-plt
-    - ./rebar xref
-    - ./rebar dialyze
+    - ./rebar3 compile
+    - ./rebar3 ct -v:
+        timeout: 3600
+    - ./rebar3 eunit
+    - ./rebar3 xref
+    - ./rebar3 dialyzer
     - ./elvis rock
-    - ./rebar doc
+    - ./rebar3 edoc
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/
-    - mv logs $CIRCLE_TEST_REPORTS
     - mkdir -p $CIRCLE_ARTIFACTS
-    - mv doc $CIRCLE_ARTIFACTS
-
+    - cp -r _build/test $CIRCLE_TEST_REPORTS
+    - cp -r doc $CIRCLE_ARTIFACTS
