--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,12 @@
-%% Plugin usage
-{plugins, [rebar_lock_deps_plugin]}.
-
 {dialyzer, [{warnings, [no_behaviours, race_conditions, error_handling]}]}.
 {xref_checks, [undefined_function_calls, undefined_functions, locals_not_used, deprecated_function_calls, deprecated_functions]}.
 {erl_opts, [warnings_as_errors, debug_info, {parse_transform, lager_transform}]}.
 
-{eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
 
 {cover_enabled, true}.
+
+{cover_opts, [verbose]}.
 
 %% Whether to print coverage report to console. Default is `false'
 {cover_print_enabled, true}.
@@ -19,16 +18,22 @@
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
   {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
-  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}},
-  {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}},
-  {sync, ".*", {git, "git://github.com/rustyio/sync.git", "master"}}
-  ]}.
+  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}}
+]}.
 {sub_dirs, ["rel"]}.
 
 {ct_extra_params, "-config test/ct.config"}.
 
+{dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 
-%% Circle-CI doesn't set FQDNs, so long names break
 
-{ct_use_short_names, true}.
+{profiles, [
+  {test,
+    [
+      {deps, [
+        {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}}
+        ]}
+    ]}
+]}.
 
+{ct_opts, [{verbosity, 100}]}.
