Add lashup_kv test

--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,6 @@
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}}
 ]}.
-{sub_dirs, ["rel"]}.
 
 {ct_extra_params, "-config test/ct.config"}.
 
@@ -33,7 +32,18 @@
       {deps, [
         {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}}
         ]}
+    ]},
+  {dev,
+    [
+      {deps, [
+        {sync, ".*", {git, "https://github.com/rustyio/sync.git", master}}
+      ]}
     ]}
 ]}.
 
 {ct_opts, [{verbosity, 100}]}.
+
+{lib_dirs, ["apps"]}.
+
+%% directories where OTP applications for the project can be located
+{project_app_dirs, ["apps/lashup", "apps/lashup_kv", "apps/lashup_nervecenter", "apps/lashup_metadata", "."]}.
