Try to coax rebar3 into working

--- a/rebar.config
+++ b/rebar.config
@@ -38,12 +38,23 @@
       {deps, [
         {sync, ".*", {git, "https://github.com/rustyio/sync.git", master}}
       ]}
+    ]},
+  {prod,
+    [
+      {relx, [
+        {dev_mode, false}
+      ]}
     ]}
 ]}.
 
 {ct_opts, [{verbosity, 100}]}.
 
-{lib_dirs, ["apps"]}.
 
-%% directories where OTP applications for the project can be located
-{project_app_dirs, ["apps/lashup", "apps/lashup_kv", "apps/lashup_nervecenter", "apps/lashup_metadata", "."]}.
+{relx,[
+  {dev_mode, true},
+  {release, {lashup, "0.0.1"}, [lashup]},
+  {extended_start_script, true},
+  {overlay, [
+    {mkdir, "data/"}
+  ]}
+]}.
