Remove lashup nervecenter

--- a/elvis.config
+++ b/elvis.config
@@ -4,7 +4,7 @@
     [
       {config,
         [
-          #{dirs => ["src", "test", "apps/lashup/src", "apps/lashup_kv/src", "apps/lashup_metadata/src", "apps/lashup_nervecenter/src"],
+          #{dirs => ["src", "test"],
             filter => "lashup_*.erl",
             rules => [
             {elvis_style, max_function_length, #{max_length => 30}},
