--- a/rebar.config
+++ b/rebar.config
@@ -16,9 +16,7 @@
 
 {deps, [
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}},
-  {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
-  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", master}}
+  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}}
 ]}.
 
 {ct_extra_params, "-config test/ct.config"}.
