Prepare for publishing

--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,7 @@
 
 {cover_opts, [verbose]}.
 
+{plugins, [rebar3_hex]}.
 %% Whether to print coverage report to console. Default is `false'
 {cover_print_enabled, true}.
 
