Prepare for standalone installation

--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,6 @@
 
 {cover_opts, [verbose]}.
 
-{plugins, [rebar3_hex]}.
 %% Whether to print coverage report to console. Default is `false'
 {cover_print_enabled, true}.
 
@@ -17,7 +16,9 @@
 
 {deps, [
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}}
+  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}},
+  {eflame, ".*", {git, "https://github.com/slfritchie/eflame.git", master}},
+  {eper, ".*", {git, "https://github.com/massemanet/eper.git", {tag, "0.97.1"}}}
 ]}.
 
 {ct_extra_params, "-config test/ct.config"}.
@@ -32,16 +33,11 @@
         {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}}
         ]}
     ]},
-  {dev,
-    [
-      {deps, [
-        {sync, ".*", {git, "https://github.com/rustyio/sync.git", master}}
-      ]}
-    ]},
   {prod,
     [
       {relx, [
-        {dev_mode, false}
+        {dev_mode, false},
+        {include_erts, true}
       ]}
     ]}
 ]}.
@@ -51,9 +47,13 @@
 
 {relx,[
   {dev_mode, true},
-  {release, {lashup, "0.0.1"}, [lashup]},
+  {release, {lashup, "0.0.1"}, [lashup, mnesia, eper, runtime_tools, eflame, debugger, observer]},
   {extended_start_script, true},
+  {vm_args, "config/vm.args"},
+  {sys_config, "./config/sys.config"},
   {overlay, [
-    {mkdir, "data/"}
+    {mkdir, "log/sasl"},
+    {mkdir, "data/"},
+    {copy, "bin/env", "bin"}
   ]}
 ]}.
