--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
 
 {deps, [
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.0.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "sargun/18"}}
+  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "make-faster"}}
 ]}.
 
 {ct_extra_params, "-config test/ct.config"}.
