Refactor lashup_gm, and add metrics

--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,8 @@
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.2.1"}}},
   {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "make-faster"}},
   {eflame, ".*", {git, "https://github.com/slfritchie/eflame.git", master}},
-  {eper, ".*", {git, "https://github.com/massemanet/eper.git", {tag, "0.97.1"}}}
+  {eper, ".*", {git, "https://github.com/massemanet/eper.git", {tag, "0.97.1"}}},
+  {exometer_core, ".*", {git, "git://github.com/Feuerlabs/exometer_core", {tag, "1.4"}}}
 ]}.
 
 {ct_extra_params, "-config test/ct.config"}.
