--- a/elvis.config
+++ b/elvis.config
@@ -4,7 +4,7 @@
     [
       {config,
         [
-          #{dirs => ["src", "test"],
+          #{dirs => ["src"],
             filter => "lashup_*.erl",
             rules => [
             {elvis_style, max_function_length, #{max_length => 30}},
