--- a/elvis.config
+++ b/elvis.config
@@ -7,7 +7,12 @@
           #{dirs => ["src"],
             filter => "lashup_*.erl",
             rules => [
-            {elvis_style, max_function_length, #{max_length => 30}},
+            {elvis_style, max_function_length,
+                #{
+                    max_length => 30,
+                    ignore_functions => [{lashup_hyparview_membership, handle_info}]
+                }
+            },
             {elvis_style, no_spec_with_records},
             {elvis_style, dont_repeat_yourself, #{min_complexity => 20}},
             {elvis_style, no_behavior_info},
