Update elvis.config to deal with elvis bug - https://github.com/inaka/elvis/issues/407

--- a/elvis.config
+++ b/elvis.config
@@ -10,7 +10,12 @@
             {elvis_style, max_function_length,
                 #{
                     max_length => 30,
-                    ignore_functions => [{lashup_hyparview_membership, handle_info}]
+                    ignore_functions => [
+                        {lashup_hyparview_membership, handle_info},
+                        %% There is a bug in elvis that makes these problematic (https://github.com/inaka/elvis/issues/407)
+                        {lashup_config, passive_view_size},
+                        {lashup_config, active_view_size}
+                    ]
                 }
             },
             {elvis_style, no_spec_with_records},
