--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,6 @@
 
 {cover_opts, [verbose]}.
 
-{plugins, [rebar3_hex]}.
 %% Whether to print coverage report to console. Default is `false'
 {cover_print_enabled, true}.
 
@@ -29,6 +28,10 @@
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 
+{plugins, [
+    rebar3_hex,
+    {rebar_covertool, ".*", {git, "git@github.com:idubrov/covertool.git", master}}
+]}.
 
 {profiles, [
   {test,
