Refactor lashup_gm_route  -lashup_gm_route: Make it so that Children are explicitly part of tree entries  -Remove Lashup GM Route cache

--- a/elvis.config
+++ b/elvis.config
@@ -11,6 +11,7 @@
                             #{
                                 max_length => 30,
                                 ignore_functions => [
+                                {lashup_gm_route, handle_event},
                                 {lashup_hyparview_membership, handle_info},
                                 %% There is a bug in elvis that makes these problematic (https://github.com/inaka/elvis/issues/407)
                                 {lashup_config, passive_view_size},
