--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,7 @@
 
 {deps, [
   {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.2.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "make-faster-experimental"}},
+  {riak_dt, ".*", {git, "https://github.com/sargun/riak_dt.git", "make-faster"}},
   {eflame, ".*", {git, "https://github.com/slfritchie/eflame.git", master}},
   {eper, ".*", {git, "https://github.com/massemanet/eper.git", {tag, "0.97.1"}}},
   {exometer_core, ".*", {git, "git://github.com/Feuerlabs/exometer_core", {tag, "1.4"}}}
