Creates kv2, nclock mnesia tables

--- a/elvis.config
+++ b/elvis.config
@@ -15,8 +15,9 @@
                                 {lashup_hyparview_membership, handle_info},
                                 %% There is a bug in elvis that makes these problematic (https://github.com/inaka/elvis/issues/407)
                                 {lashup_config, passive_view_size},
-                                {lashup_config, active_view_size}
-                            ]
+                                {lashup_config, active_view_size},
+                                {lashup_kv, get_lclock},
+                                {lashup_kv, upgrade_table}]
                             }
                         },
                         {elvis_style, no_spec_with_records},
