add verbose flag to make circle ci happy

--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ dependencies:
 test:
   override:
     - ./rebar3 compile
-    - ./rebar3 ct
+    - ./rebar3 ct -v --readable=false
     - ./rebar3 eunit
     - ./rebar3 xref
     - ./rebar3 dialyzer
