Add support for erlang 20.x

--- a/rebar.config
+++ b/rebar.config
@@ -17,11 +17,10 @@
 {cover_export_enabled, true}.
 
 {deps, [
-  {lager, ".*", {git, "git://github.com/basho/lager", {tag, "3.2.1"}}},
-  {riak_dt, ".*", {git, "https://github.com/dcos/riak_dt.git", "make-faster"}},
-  {eflame, ".*", {git, "https://github.com/slfritchie/eflame.git", master}},
-  {eper, ".*", {git, "https://github.com/massemanet/eper.git", {tag, "0.97.1"}}},
-  {exometer_core, ".*", {git, "git://github.com/Feuerlabs/exometer_core", {tag, "1.4"}}}
+    % Hex repos
+    {lager, {git, "git://github.com/basho/lager", {branch, "master"}}},
+    {riak_dt, {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}},
+    {exometer_core, {git, "https://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}}
 ]}.
 
 {ct_extra_params, "-config test/ct.config"}.
