--- a/rebar.config
+++ b/rebar.config
@@ -1,66 +1,95 @@
 {minimum_otp_vsn, "19.1"}.
 
-{dialyzer, [{warnings, [no_behaviours, race_conditions, error_handling]}]}.
-{xref_checks, [undefined_function_calls, undefined_functions, locals_not_used, deprecated_function_calls, deprecated_functions]}.
-{erl_opts, [warnings_as_errors, debug_info, {parse_transform, lager_transform}]}.
-
-{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
-
-{cover_enabled, true}.
-
-{cover_opts, [verbose]}.
-
-%% Whether to print coverage report to console. Default is `false'
-{cover_print_enabled, true}.
-
-%% Whether to export coverage report to file. Default is `false'
-{cover_export_enabled, true}.
+{erl_opts, [
+    debug_info,
+    warnings_as_errors,
+    {parse_transform, lager_transform}
+]}.
 
 {deps, [
-    % Hex repos
-    {lager, {git, "git://github.com/basho/lager", {branch, "master"}}},
+    lager,
     {riak_dt, {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}},
     {exometer_core, {git, "https://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}}
 ]}.
 
-{ct_extra_params, "-config test/ct.config"}.
-
-{dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
-
 {plugins, [
-    rebar3_hex,
-    {rebar_covertool, ".*", {git, "git@github.com:idubrov/covertool.git", master}}
+    rebar_covertool
 ]}.
 
+{eunit_opts, [
+    {cover_enabled, true},
+    verbose,
+    {report, {eunit_surefire, [{dir, "."}]}}
+]}.
+
+{ct_opts, [
+    {sys_config, "test/sys.config"}
+]}.
+
+{cover_enabled, true}.
+{cover_print_enabled, true}.
+{cover_export_enabled, true}.
+
+{xref_checks, []}.
+{xref_queries, [{"(XC - UC) || (XU - X - B - \"(dtrace)\" : Mod)", []}]}.
+
+
 {profiles, [
-  {test,
-    [
-      {deps, [
-        {proper, ".*", {git, "https://github.com/manopapad/proper.git", master}}
+    {test, [
+        {deps, [
+            proper
         ]}
     ]},
-  {dev,
-    [
-      {deps, [
-        {sync, ".*", {git, "https://github.com/rustyio/sync.git", master}}
-      ]}
+    {dev, [
+        {deps, [
+            sync
+        ]}
     ]},
-  {prod,
-    [
-      {relx, [
-        {dev_mode, false}
-      ]}
+    {lint,  [
+        {plugins, [
+            rebar3_lint
+        ]}
+    ]},
+    {prod, [
+        {relx, [
+            {dev_mode, false}
+        ]}
     ]}
 ]}.
 
-{ct_opts, [{verbosity, 100}]}.
-
-
-{relx,[
-  {dev_mode, true},
-  {release, {lashup, "0.0.1"}, [lashup]},
-  {extended_start_script, true},
-  {overlay, [
-    {mkdir, "data/"}
-  ]}
+{elvis, [
+    #{
+        dirs => [
+            "src"
+        ],
+        filter => "lashup*.erl",
+        ignore => [zbase32],
+        rules => [
+            {elvis_style, max_function_length, #{
+                max_length => 30,
+                ignore_functions => [
+                    {lashup_gm_route, handle_event},
+                    {lashup_hyparview_membership, handle_info},
+                    %% There is a bug in elvis that makes these problematic (https://github.com/inaka/elvis/issues/407)
+                    {lashup_config, passive_view_size},
+                    {lashup_config, active_view_size},
+                    {lashup_kv, get_lclock},
+                    {lashup_kv, upgrade_table}
+                ]
+            }},
+            {elvis_style, no_spec_with_records},
+            {elvis_style, dont_repeat_yourself, #{min_complexity => 20}},
+            {elvis_style, no_behavior_info},
+            {elvis_style, used_ignored_variable},
+            {elvis_style, nesting_level, #{level => 3}},
+            {elvis_style, god_modules, #{limit => 25}},
+            {elvis_style, no_if_expression},
+            {elvis_style, line_length, #{limit => 120, count_comments => false}},
+            {elvis_style, no_tabs},
+            {elvis_style, no_trailing_whitespace},
+            {elvis_style, macro_names},
+            {elvis_style, macro_module_names},
+            {elvis_style, operator_spaces, #{rules => [{right, ","}, {right, "++"}, {left, "++"}]}}
+        ]
+    }
 ]}.
