--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,14 @@ version: 2
 jobs:
   build:
     machine: true
-    working_directory: '~/dcos-net'
+    working_directory: '~/lashup'
     environment:
-      - OTP_VERSION: "20.0.5"
-      - OTP_DOWNLOAD_SHA256: "45b6966362c3a4da292d470ef25af9f91b851d4e96d3736abdabbba0556acf6c"
+      - OTP_VERSION: "20.1.7"
+      - OTP_DOWNLOAD_SHA256: "4981aa41a78039e8353e3f8b349f5423c582c05ccef46a15420006e8dbb3f502"
     steps:
       - checkout
       - restore_cache:
-          key: otp-build-20.0.5
+          key: otp-build-20.1.7
       - run:
           name: Building OTP
           command: |
@@ -31,7 +31,7 @@ jobs:
                 && ./configure \
                 && make -j$(getconf _NPROCESSORS_ONLN) )
       - save_cache:
-          key: otp-build-20.0.5
+          key: otp-build-20.1.7
           paths:
             - ~/src/otp
       - run:
