Add support for OTP 21

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           command: ./rebar3 as test cover
       - run:
           name: Generating cover report
-          command: ./rebar3 covertool generate
+          command: ./rebar3 as test covertool generate
       - save_cache:
           key: machine-rebar3
           paths:
