--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{minimum_otp_vsn, "19.1"}.
+{minimum_otp_vsn, "20"}.
 
 {erl_opts, [
     debug_info,
@@ -8,12 +8,8 @@
 
 {deps, [
     lager,
-    {riak_dt, {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}},
-    {exometer_core, {git, "https://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}}
-]}.
-
-{plugins, [
-    rebar_covertool
+    exometer_core,
+    {riak_dt, {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}}
 ]}.
 
 {eunit_opts, [
@@ -36,6 +32,9 @@
 
 {profiles, [
     {test, [
+        {plugins, [
+            {covertool, "2.0.0"}
+        ]},
         {deps, [
             proper
         ]}
@@ -47,7 +46,7 @@
     ]},
     {lint,  [
         {plugins, [
-            rebar3_lint
+            {rebar3_lint, "0.1.10"}
         ]}
     ]},
     {prod, [
