--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-### Erlang template
-.eunit
-deps
-*.o
-*.beam
+_build/
+doc/
 *.plt
-erl_crash.dump
-ebin
-rel/example_project
-.concrete/DEV_MODE
-.rebar
-logs/*
