Upgrade OTP version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,11 @@ jobs:
     machine: true
     working_directory: '~/lashup'
     environment:
-      - OTP_VERSION: "20.1.7"
-      - OTP_DOWNLOAD_SHA256: "4981aa41a78039e8353e3f8b349f5423c582c05ccef46a15420006e8dbb3f502"
+      - OTP_VERSION: "21.1"
     steps:
       - checkout
       - restore_cache:
-          key: otp-build-20.1.7
+          key: otp-build-21.1
       - run:
           name: Building OTP
           command: |
@@ -18,39 +17,27 @@ jobs:
                   exit 0
               fi
 
-              OTP_DOWNLOAD_URL="https://github.com/erlang/otp/archive/OTP-${OTP_VERSION}.tar.gz"
-
               set -xe
-              curl -fSL -o otp-src.tar.gz "$OTP_DOWNLOAD_URL"
-              echo "$OTP_DOWNLOAD_SHA256  otp-src.tar.gz" | sha256sum -c -
-              mkdir -vp ~/src/otp
-              tar -xzf otp-src.tar.gz -C ~/src/otp --strip-components=1
-              rm otp-src.tar.gz
+              ( mkdir -p ~/src && cd ~/src \
+                && git clone --branch maint-21 https://github.com/erlang/otp.git )
               ( cd ~/src/otp \
+                && git checkout 377f19f25aeec6939a6728bd0c4910086c22ccdc \
                 && ./otp_build autoconf \
                 && ./configure \
                 && make -j$(getconf _NPROCESSORS_ONLN) )
       - save_cache:
-          key: otp-build-20.1.7
+          key: otp-build-21.1
           paths:
             - ~/src/otp
       - run:
           name: Installing OTP
           command: (cd ~/src/otp && sudo make install)
-      - restore_cache:
-          key: machine-rebar3
       - run:
           name: Updating rebar3
           command: ./rebar3 update
-      - restore_cache:
-          key: machine-rebar3-deps-{{ checksum "rebar.lock" }}
       - run:
           name: Fetching dependencies
           command: ./rebar3 get-deps
-      - save_cache:
-          key: machine-rebar3-deps-{{ checksum "rebar.lock" }}
-          paths:
-            - _build/default/lib
       - run:
           name: Building
           command: ./rebar3 compile
@@ -75,10 +62,6 @@ jobs:
       - run:
           name: Generating cover report
           command: ./rebar3 as test covertool generate
-      - save_cache:
-          key: machine-rebar3
-          paths:
-            - ~/.cache/rebar3
       - run:
           name: Installing codecov
           command: pip install codecov
