Move from Lager to Logger

--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,11 @@
-{minimum_otp_vsn, "20"}.
+{minimum_otp_vsn, "21"}.
 
 {erl_opts, [
     debug_info,
-    warnings_as_errors,
-    {parse_transform, lager_transform}
+    warnings_as_errors
 ]}.
 
 {deps, [
-    lager,
     prometheus,
     {riak_dt, {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}}
 ]}.
@@ -18,17 +16,12 @@
     {report, {eunit_surefire, [{dir, "."}]}}
 ]}.
 
-{ct_opts, [
-    {sys_config, "test/sys.config"}
-]}.
-
 {cover_enabled, true}.
 {cover_print_enabled, true}.
 {cover_export_enabled, true}.
 
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(dtrace)\" : Mod)", []}]}.
-
 
 {profiles, [
     {test, [
